# prisma-vs-sqlx-slow-migration

./: .gitignore  README.md
prisma-new/app/: Cargo.toml
prisma-new/prisma-cli/: Cargo.toml
prisma-old/: Cargo.toml
prisma-old/app/: Cargo.toml
prisma-old/app/prisma/: dev.db
prisma-old/app/src/: main.rs
prisma-old/prisma-cli/: Cargo.toml
sqlx/: Cargo.toml
sqlx/prisma/: dev.db-journal
sqlx/sqlx_db/: gdl_conf.db
sqlx/src/: main.rs
