[package]
name = "prisma-cli"
version = "0.1.0"
edition = "2021"
author = "GorillaDevs Inc."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { git = "https://github.com/gorilla-devs/prisma-client-rust", rev = "f74daf611f5ce8c20351eb05014b9176df2f0939", features = [
    "sqlite-create-many",
    "sqlite",
    "migrations",
], default_features = false }
prisma-client-rust-cli = { git = "https://github.com/gorilla-devs/prisma-client-rust", rev = "f74daf611f5ce8c20351eb05014b9176df2f0939", features = [
    "sqlite-create-many",
    "sqlite",
    "migrations",
], default_features = false }
tokio = { version = "1", features = ["full"] }
